api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taskmgmt-api
  labels:
    app: taskmgmt-api
spec:
  selector:
    app: taskmgmt-api
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  type: ClusterIP
